@startuml
skinparam handwritten true
skinparam backgroundColor #EEEBDC
skinparam shadowing<<with_shadow>> true
left to right direction

interface IDomainService
interface IDomainStep
IDomainStep : execute()
interface IDecideStepsExt
interface IDomainRevokableStep
IDomainRevokableStep : rollback()
interface IDomainExtension
interface IIdentityResolver
interface IModelAttachmentExt
IModelAttachmentExt : explain()
IModelAttachmentExt : render()
abstract StepsExecTemplate
abstract BaseDomainAbility
BaseDomainAbility : getExtension()
BaseDomainAbility : firstExtension()
BaseDomainAbility : defaultExtension()
StepsExecTemplate : execute()
DDD : {static} findAbility()
DDD : {static} findSteps()
IDecideStepsExt : decideSteps()
IIdentityResolver : match(IDomainModel)

IDomainService <|-- IDomainStep: extend
IDomainStep <|-- IDomainRevokableStep: extend
IDomainService <|-- BaseDomainAbility: implements

IDomainExtension <|-- IDecideStepsExt: extend
IDomainExtension <|-- IModelAttachmentExt: extend

IIdentityResolver <|-- Pattern
IIdentityResolver <|-- Partner

BaseDomainAbility <-- DDD: find
IDomainStep <-- DDD: find

IDomainExtension <-- BaseDomainAbility: locate

IDomainExtension --> Pattern: bind
IDomainExtension --> Partner: bind

Partner : code
Pattern : code
IDomainExtension : code

StepsExecTemplate --> IDomainStep: orchestration
@enduml
